--- a/js/recursion/idea.yml
+++ b/js/recursion/idea.yml
@@ -18,11 +18,11 @@ Check if a string is palindrome ----------------------------- done >>
 
 Count digits in a number  ----------------------------- done >>
 
-Find maximum element in an array recursively
+Find maximum element in an array recursively -------------------------------- done >>
 
-Power of a number (x^n) using recursion
+Power of a number (x^n) using recursion ------------------------------------ done >>
 
-Implement binary search recursively
+Implement binary search recursively ------------------------------------------ done >>
 
 🪜 Stage 2: Recursive Patterns and Decision-Making
 
