--- a/js/recursion/idea.yml
+++ b/js/recursion/idea.yml
@@ -32,7 +32,7 @@ Focus on: recursion tree visualization and understanding branching paths.
 
 Print all subsequences of a string
 
-Print all subsets of an array
+Print all subsets of an array ------------------------------------------------- done >>
 
 Count the number of subsets with a given sum
 
@@ -151,3 +151,7 @@ K-th permutation sequence (LeetCode #60)
 Generate Power Set (bitmask + recursion)
 
 Recursively solve “Tower of Hanoi” with 3 pegs and n disks
+
+
+
+
