--- a/js/recursion/pattern.yml
+++ b/js/recursion/pattern.yml
@@ -17,11 +17,11 @@ Concept
 
     Examples
 
-    Subsets / Subsequences
+    Subsets / Subsequences ----------------------------done
 
     Partition array
 
-    Subset Sum
+    Subset Sum 
 
     Equal Partition
 
