--- a/js/recursion/pattern.yml
+++ b/js/recursion/pattern.yml
@@ -21,11 +21,11 @@ Concept
 
     Partition array
 
-    Subset Sum 
+    Subset Sum -------------------------------------------- done
 
     Equal Partition
 
-    Combination Sum (variant)
+    Combination Sum (variant) -------------------------------------- done
 
 2️⃣ Assignment / Bucket Pattern
 
@@ -144,7 +144,7 @@ Concept
 
     Quick Sort
 
-    Binary Search
+    Binary Search ------------------------------------- done
 
     Max / Min in array
 
